# Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: Triangle.hlsl
src/: CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Device.cpp  Device.h  main.cpp  pch.h  window.cpp  window.h
src/Core/: Assert.cpp  Assert.h
src/Graphics/: CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  SwapChain.cpp  SwapChain.h
src/Platform/: Window.cpp  Window.h
src/RHI/: CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  IndexBuffer.h  PipelineState.cpp  PipelineState.h  RHI.cpp  RHI.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h
src/RHI/Core/: CommandQueue.cpp  CommandQueue.h  Device.h  SwapChain.h
src/RHI/Pipeline/: PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  Shader.cpp
src/RHI/Resource/: ConstantBuffer.cpp  ConstantBuffer.h  DescriptorHeap.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.h
src/Renderer/: Renderer.cpp  Renderer.h
